# TaxBrokerReport

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-all.yml  ci.yml  cleanup-manual-release.yml  linux-arm64-release.yml  linux-deb-x86-64-release.yml  macOS-arm64-release.yml  macOS-x86-64-release.yml  pr-prep.yml  test-pr.yml  windows-x86-64-release.yml
Manuals/: Instructions.md
docs/: ArchitecturePlan.md
docs/beta-testing/: testing-guide-en.md  testing-guide-sl.md
docs/developers/: README.md  build-instructions.md  contributing.md  future-plans.md
docs/manuals/: actions.md
docs/users/: app-usage-en.md  app-usage-sl.md  data-format.md  download-guide.md  edavki-upload-en.md  edavki-upload-sl.md
include/: platform_config.hpp  report_loader.hpp  xml_generator.hpp
include/api/: application_service.hpp
include/app/: application_service.hpp
include/backend/: report_loader.hpp  xml_generator.hpp
include/gui/: main_window.hpp
include/util/: config.hpp  util_xml.hpp
production/linux/: bundle.sh
resources/gui/: resources.qrc
resources/gui/html/: about.html  manual_eng.html  manual_slo.html
resources/xml/edavk/: Doh_KDVP_9.21-display-sl.xslt  Doh_KDVP_9.xsd
resources/xml/edavk/schemas/: EDP-Common-1.xsd
scripts/: run_ci_locally.sh
src/: main.cpp  platform_config.cpp  report_loader.cpp  xml_generator.cpp
src/api/: application_service.cpp
src/app/: application_service.cpp
src/backend/: report_loader.cpp  xml_generator.cpp
src/gui/: main_window.cpp
src/util/: config.cpp
tests/: helper.cpp  helper.hpp  test_application_service.cpp  test_gui.cpp  test_report_loader.cpp  test_xml_generator.cpp
tests/testData/: expected_test_output.json  generated_test_data.txt
util/: util_xml.cpp  util_xml.hpp
